--- a/index.css
+++ b/index.css
@@ -93,7 +93,7 @@ nav > a {
 .cards-section > div {
     display: flex;
     justify-content: center;
-    gap: 12px;
+    gap: 18px;
 
 }
 .card {
@@ -101,12 +101,70 @@ nav > a {
     color: #1F2937;
     text-align: center;
 }
-
 .card > img {
-    box-sizing: border-box;
     width: 200px;
     height: auto;
-    border: 2px solid #3882F6;
+    border: 4px solid #3882F6;
     border-radius: .8em;
     margin-bottom: 8px;
+}
+/* Quotes Section CSS */
+.quotes-section {
+    font-weight: 200;
+    background-color: #E5E7EB;
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+.quotes-section > p {
+    width: 60vw;
+    font-size: 36px;
+    font-weight: 200;
+    line-height: 1.1;
+
+}
+/* CTA Section CSS */
+.CTA-section {
+    height: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.CTA {
+    flex: 1;
+    height: 110px;
+    border-radius: .4em;
+    background-color: #3882F6;
+    font-size: 18px;
+    line-height: 1.2;
+    color: #F9FAF9;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+       
+}
+.CTA > button {
+    background-color: #3882F6;
+    color: #F9FAF9;
+    border: 2px solid #F9FAF9;
+    border-radius: .3em;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 5px;
+    width: 8em;
+    
+}
+/* Footer CSS */
+footer {
+    height: 10vh;
+    background-color: #1F2937;
+    color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
